--- a/style.css
+++ b/style.css
@@ -241,3 +241,24 @@ footer .copyright {
     gap: 5px;
   }
 }/*# sourceMappingURL=contact.css.map */
+
+#customer-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-left: 70px;
+  flex-wrap: wrap;
+}
+
+.card {
+  height: 350px;
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  background-color: rgb(255, 255, 255);
+  text-align: center;
+  border: orange 5px solid;
+}
